@@ -1,3 +1,9 @@
+2000-03-08  Stephen Eglen  <stephen@gnu.org>
+
+	* emacs/octave-mod.el (octave-font-lock-keywords): To font-lock
+	the builtin operators, use `font-lock-builtin-face' for Emacs
+	and `font-lock-preprocessor-face' for XEmacs.
+
 2000-03-08  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* configure.in: For building shared libaries, handle
